feat: add instructions.md for zh-tw output and update Dockerfile to copy it

--- a/codex-cli/Dockerfile
+++ b/codex-cli/Dockerfile
@@ -46,6 +46,8 @@ RUN npm install -g codex.tgz \
   && rm -rf /usr/local/share/npm-global/lib/node_modules/codex-cli/tests \
   && rm -rf /usr/local/share/npm-global/lib/node_modules/codex-cli/docs
 
+COPY instructions.md /home/node/.codex/instructions.md
+
 # Inside the container we consider the environment already sufficiently locked
 # down, therefore instruct Codex CLI to allow running without sandboxing.
 ENV CODEX_UNSAFE_ALLOW_NO_SANDBOX=1
@@ -54,6 +56,7 @@ ENV CODEX_UNSAFE_ALLOW_NO_SANDBOX=1
 USER root
 COPY scripts/init_firewall.sh /usr/local/bin/
 RUN chmod 500 /usr/local/bin/init_firewall.sh
+RUN chown -R node:node /home/node/.codex/instructions.md
 
 # Drop back to non-root.
 USER node
